--- a/src/main/webapp/lib/editor/js/photo_uploader/popup/photo_uploader.html
+++ b/src/main/webapp/lib/editor/js/photo_uploader/popup/photo_uploader.html
@@ -57,9 +57,9 @@ h1{color:#333;font-size:14px;letter-spacing:-1px}
 	    	 그밖의 경우 pop_container2 클래스와 하위 HTML 적용      -->
 	<div id="pop_container2" class="pop_container2">
     	<!-- content -->
-		<form id="editor_upimage" name="editor_upimage" action="/util/fileUploader.do" method="post" enctype="multipart/form-data" onSubmit="return false;">
+		<form id="editor_upimage" name="editor_upimage" action="../../../fileUploader" method="post" enctype="multipart/form-data" onSubmit="return false;">
         <div id="pop_content2">
-			<input type="file" class="upload" id="uploadInputBox" name="Filedata">
+			<input type="file" class="upload" id="uploadInputBox" name="file">
             <p class="dsc" id="info"><strong>10MB</strong>이하의 이미지 파일만 등록할 수 있습니다.<br>(JPG, GIF, PNG, BMP)</p>
         </div>
 		</form>
@@ -67,7 +67,7 @@ h1{color:#333;font-size:14px;letter-spacing:-1px}
     </div>
     <div id="pop_container" class="pop_container" style="display:none;">
     	<!-- content -->
-    	<form id="editor_upimage5" name="editor_upimage5" action="/util/fileUploader.do" method="post" enctype="multipart/form-data" onSubmit="return false;">
+    	<form id="editor_upimage5" name="editor_upimage5" action="../../../fileUploader" method="post" enctype="multipart/form-data" onSubmit="return false;">
 	        <div id="pop_content">
 		        <p class="dsc"><em id="imageCountTxt">0장</em>/10장 <span class="bar">|</span> <em id="totalSizeTxt">0MB</em>/50MB</p>
 	        	<!-- [D] 첨부 이미지 여부에 따른 Class 변화 
