네이버 스마트에디터 이미지 추가 팝업에서 버튼 이미지 추가

--- a/src/main/webapp/lib/editor/js/photo_uploader/popup/photo_uploader.html
+++ b/src/main/webapp/lib/editor/js/photo_uploader/popup/photo_uploader.html
@@ -89,8 +89,8 @@ h1{color:#333;font-size:14px;letter-spacing:-1px}
     <!-- footer -->
     <div id="pop_footer">
 	    <div class="btn_area">
-            <a href="#"><img src="../../img/photoQuickPopup/btn_confirm.png" width="49" height="28" alt="확인" id="btn_confirm"></a>
-            <a href="#"><img src="../../img/photoQuickPopup/btn_cancel.png" width="48" height="28" alt="취소" id="btn_cancel"></a>
+            <a href="#"><img src="../../../img/photoQuickPopup/btn_confirm.png" width="49" height="28" alt="확인" id="btn_confirm"></a>
+            <a href="#"><img src="../../../img/photoQuickPopup/btn_cancel.png" width="48" height="28" alt="취소" id="btn_cancel"></a>
         </div>
     </div>
     <!-- //footer -->
